# sipe

./: .coveragerc  .flake8  .isort.cfg  pyproject.toml  setup.cfg  update-deps.sh  update-dev-deps.sh
src/sipe/: console.py  log.py
src/sipe/config/models/: base.py  clients.py  identifiers.py
test/config/model/: test_identifiers.py
