[tool.poetry]
name = "sipe"
version = "2020.07.01a0"
description = "Python asynchronous SIP proxy"
authors = ["Shane R. Spencer <305301+whardier@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.scripts]
sipe = "sipe.console:main"

[tool.poetry.dependencies]
python = "^3.8"
any-case = "^0.1.6"
construct = "^2.10.56"
dpkt = "^1.9.2"
humanize = "^2.5.0"
inflect = "^4.1.0"
pydantic = {version = "^1.6", extras = ["email", "dotenv"]}
stevedore = "^3.1.0"
structlog = "^20.1.0"
toml-sort = "^0.18.0"
tomlkit = "^0.6.0"
typer = {version = "^0.3.0", extras = ["all"]}
ursine = "^0.3.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
bandit = "^1.6.2"
black = "^19.10b0"
coverage = "^5.2"
doc8 = "^0.8.1"
flake8 = "^3.8.3"
hypothesis = "^5.19.2"
isort = "<5"
mock = "^4.0.2"
mypy = "^0.782"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
rope = "^0.17.0"
setuptools = "^49.2.0"
sphinx = "^3.1.2"
tox = "^3.17.0"
pytest-asyncio = "^0.14.0"

[tool.black]
target-version = ['py38']

[tool.pytest.ini_options]
addopts = "--cov=sipe --doctest-modules"

[tool.isort]
line_length = 88
indent = "    "
include_trailing_comma = true
multi_line_output = 3
balanced_wrapping = true
length_sort = true
force_single_line = false
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party"
import_heading_firstparty = "Sipe Project: Absolute"
import_heading_pydantic = "Pydantic: https://github.com/samuelcolvin/pydantic/"
import_heading_structlog = "Structlog: https://github.com/hynek/structlog"
import_heading_localfolder = "Sipe Project: Relative"
known_pydantic = "pydantic"
known_structlog = "structlog"
sections = "FUTURE,STDLIB,TYPING,PYDANTIC,STRUCTLOG,PHONENUMBERS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


